# typing-practice

./: Makefile.am  NOTICE  README.md  README.txt  configure.ac  esrille-typing-practice.spec.in
debian/: changelog  changelog.in  control  copyright
docs/: Makefile.am  default.css  hiragana_ime.html  hiragana_ime.md  index.html  index.md  install.html  install.md  specification.html  specification.md  template.html  usage.html  usage.md
icons/: Makefile.am
lessons/: Makefile.am  aiueo.txt  english.txt  english3.txt  english4.txt  gozyuuon.txt  hahihuheho.txt  kakikukeko.txt  kakko.txt  kanzi.txt  kanzi1.txt  kanzi2.txt  kanzi3.txt  kanzi4.txt  kanzi5.txt  kanzi6.txt  kutouten.txt  mamimumemo.txt  menu.txt  misc.txt  n.txt  naninuneno.txt  rarirurero.txt  sasisuseso.txt  suuzi.txt  tatituteto.txt  tyouon.txt  wawo.txt  xtu.txt  xyaxyuxyo.txt  yayuyo.txt
po/: POTFILES.in  esrille-typing-practice.pot  ja.po
src/: Makefile.am  application.py  chart.py  engine.py  esrille-typing-practice.desktop.in  hurigana.py  ime.py  keyboard.py  main.py  menu.ui  package.py.in.in  roomazi.py  window.py
