# Copyright (c) 2020 Esrille Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at:
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

lessons_DATA = \
	menu.txt \
	gozyuuon.txt \
	aiueo.txt \
	kakikukeko.txt \
	sasisuseso.txt \
	tatituteto.txt \
	naninuneno.txt \
	hahihuheho.txt \
	mamimumemo.txt \
	yayuyo.txt \
	rarirurero.txt \
	wawo.txt \
	misc.txt \
	xtu.txt \
	xyaxyuxyo.txt \
	tyouon.txt \
	n.txt \
	kutouten.txt \
	kakko.txt \
	suuzi.txt \
	kanzi.txt \
	kanzi1.txt \
	kanzi2.txt \
	kanzi3.txt \
	kanzi4.txt \
	kanzi5.txt \
	kanzi6.txt \
	$(NULL)

lessonsdir = $(pkgdatadir)/lessons

EXTRA_DIST = \
	menu.txt \
	gozyuuon.txt \
	aiueo.txt \
	kakikukeko.txt \
	sasisuseso.txt \
	tatituteto.txt \
	naninuneno.txt \
	hahihuheho.txt \
	mamimumemo.txt \
	yayuyo.txt \
	rarirurero.txt \
	wawo.txt \
	misc.txt \
	xtu.txt \
	xyaxyuxyo.txt \
	tyouon.txt \
	n.txt \
	kutouten.txt \
	kakko.txt \
	suuzi.txt \
	kanzi.txt \
	kanzi1.txt \
	kanzi2.txt \
	kanzi3.txt \
	kanzi4.txt \
	kanzi5.txt \
	kanzi6.txt \
	$(NULL)

uninstall-hook:
	-rmdir $(lessonsdir)
